--- a/CompanionApplication/TestApplication/CompanionApplication.csproj
+++ b/CompanionApplication/TestApplication/CompanionApplication.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{034D3DC1-4C82-41C8-905C-F047372AA421}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>TestApplication</RootNamespace>
-    <AssemblyName>TestApplication</AssemblyName>
+    <RootNamespace>CompanionApplication</RootNamespace>
+    <AssemblyName>CompanionApplication</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
