--- a/CompanionApplication/TestApplication/Properties/Settings.settings
+++ b/CompanionApplication/TestApplication/Properties/Settings.settings
@@ -1,15 +1,18 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="TestApplication.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="CompanionApplication.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="connectedPortName" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">COM7</Value>
     </Setting>
     <Setting Name="TCPHostname" Type="System.String" Scope="User">
       <Value Profile="(Default)">localhost</Value>
     </Setting>
     <Setting Name="TCPPort" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">4213</Value>
+    </Setting>
+    <Setting Name="VLCPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)">C:\Program Files (x86)\VideoLAN\VLC\vlc.exe</Value>
     </Setting>
   </Settings>
 </SettingsFile>
