Basic Discord Rich Presence support

--- a/CompanionApplication/TestApplication/Properties/Settings.settings
+++ b/CompanionApplication/TestApplication/Properties/Settings.settings
@@ -23,5 +23,8 @@
     <Setting Name="ApplicationMediaInterface" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="DiscordRPVerbosity" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
