--- a/CompanionApplication/TestApplication/packages.config
+++ b/CompanionApplication/TestApplication/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="AudioSwitcher.AudioApi" version="3.0.0" targetFramework="net461" />
   <package id="AudioSwitcher.AudioApi.CoreAudio" version="3.0.0.1" targetFramework="net461" />
+  <package id="DiscordRichPresence" version="1.0.150" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
 </packages>
