--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
+CompanionApplication/.vs/CompanionApplication/v15/.suo
+CompanionApplication/.vs/CompanionApplication/v15/Server/sqlite3/storage.ide-shm
