--- a/CompanionApplication/TestApplication/CompanionApplication.csproj
+++ b/CompanionApplication/TestApplication/CompanionApplication.csproj
@@ -96,6 +96,7 @@
     <Compile Include="CommandHandler.cs" />
     <Compile Include="ControlIcon.cs" />
     <Compile Include="Discord\DiscordRichPresence.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RemoteConnection.cs" />
@@ -108,6 +109,7 @@
     <Compile Include="SystemMedia\SystemAudio.cs" />
     <Compile Include="ApplicationMedia\VLC\TCPClient.cs" />
     <Compile Include="ApplicationMedia\VLC\VLCInterface.cs" />
+    <Compile Include="SystemMedia\SystemMediaInterface.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
