--- a/CompanionApplication/TestApplication/Properties/Settings.settings
+++ b/CompanionApplication/TestApplication/Properties/Settings.settings
@@ -26,5 +26,8 @@
     <Setting Name="DiscordRPVerbosity" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="WheelSensitivity" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
