--- a/CompanionApplication/TestApplication/Properties/Settings.settings
+++ b/CompanionApplication/TestApplication/Properties/Settings.settings
@@ -29,5 +29,8 @@
     <Setting Name="WheelSensitivity" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">1</Value>
     </Setting>
+    <Setting Name="DiscordPrefixEnable" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
